# sfml-project

./: CMakeLists.txt  CMakePresets.json  Components.cpp  Components.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Game.cpp  Game.hpp  Vec2.hpp  Vec2__.cpp  Vec2__.hpp  config.txt  main.cpp
test/: Vec.hpp  Vec2.hpp  test  test.cpp
test/test.dSYM/Contents/Resources/DWARF/: test
test/test.dSYM/Contents/Resources/Relocations/aarch64/: test.yml
